# kingdom-monorepo

./: .gitignore  .gitmodules  DIFF_20251119_201800.md  DIFF_20251124T134818Z.md  DIFF_20251124T134827Z.md  DIFF_20251127T085007Z.md  MERGE_FIX_SUMMARY.md  MERGE_VALIDATION_REPORT.md  Makefile  README.md  RECOMMENDATIONS_20251119_201800.md  RECOMMENDATIONS_20251124T134734Z.md  RECOMMENDATIONS_20251127T085007Z.md  justfile  package.json  pyproject.toml  pytest.ini  setup.sh  verify.sh
.github/: CODEOWNERS  README.md  RULESETS.md  SETUP.md  TESTING.md  dependabot.yml  issue-labeler.yml  labeler.yml  pr-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: validate-workflows.sh
.github/workflows/: ai-code-review.yml  auto-label.yml  auto-merge.yml  ci.yml  code-quality.yml  docker-publish.yml  documentation.yml  project-automation.yml  release.yml  security.yml
agents/: INDEX.md  QUICKSTART.md  README.md  agents.md  features.md  journal.md  project_summary.md  rules.md  srs.md  tasks.md
ansible/: EXAMPLES.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  SOLUTION_SUMMARY.md  ansible.cfg
apps/: README.md
cbw-dotfiles/: .bash_profile  .bashrc  .gitignore  CHANGELOG.md  DOTFILES_WORKFLOW.md  EXAMPLES.md  FEATURES.md  FUNCTIONS.md  QUICKREF.md  QUICKSTART.md  README.md  SUMMARY.md  bash_aliases  bash_secrets.example  bashrc  install.sh
data/: README.md
db/: README.md
docs/: README.md  agents-platform.md  agents-platform.tldr.md  mcp-servers-guide.md
infra/: README.md
libs/: README.md
libs/openai-tools/: LICENSE  QUICKSTART.md  README.md  TOOLS.md  pyproject.toml
libs/openai-tools/examples/: basic_usage.py  openai_integration.py
libs/openai-tools/openai_tools/: __init__.py  schema_generator.py
libs/openai-tools/openai_tools/agent_comm/: __init__.py
libs/openai-tools/openai_tools/data/: __init__.py
libs/openai-tools/openai_tools/database/: __init__.py
libs/openai-tools/openai_tools/filesystem/: __init__.py
libs/openai-tools/openai_tools/git_ops/: __init__.py
libs/openai-tools/openai_tools/logical/: __init__.py
libs/openai-tools/openai_tools/mcp/: __init__.py
libs/openai-tools/openai_tools/networking/: __init__.py
libs/openai-tools/openai_tools/system/: __init__.py
libs/openai-tools/openai_tools/web/: __init__.py
libs/openai-tools/tests/: __init__.py  test_data.py  test_filesystem.py  test_logical.py  test_schema_generator.py
projects/: README.md
research/: README.md
services/: README.md
tests/: __init__.py
tools/: README.md
(+424 files in other folders)
